--- a/assignment1/features.ipynb
+++ b/assignment1/features.ipynb
@@ -403,6 +403,33 @@
     "test_acc = (best_net.predict(X_test_feats) == y_test).mean()\n",
     "print(test_acc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4.631695255493634"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.uniform(-5,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
